--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "google-genai>=1.56.0",
     "gtts>=2.5.4",
-    "openai>=2.15.0",
     "pillow>=12.0.0",
     "sift-stack-py>=0.9.6",
     "streamlit>=1.52.2",
